err/strupy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/strupy'...
Listing './lib/python3.5/site-packages/strupy/concrete'...
Compiling './lib/python3.5/site-packages/strupy/concrete/MaterialConcrete.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/MaterialConcrete.py", line 46
    print "Material_concrete init"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/MaterialRcsteel.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/MaterialRcsteel.py", line 40
    print "MaterialRcsteel init"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/RcPanel.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/RcPanel.py", line 38
    print "RcPanel init"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/RcPanelDataLoader.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/RcPanelDataLoader.py", line 57
    print "RcPanelDataLoader init"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/RcPanelLoad.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/RcPanelLoad.py", line 40
    print "RcPanelLoad init"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/RcPanelSolver.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/RcPanelSolver.py", line 41
    print "RcPanelSolver"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/RcPanelToolbox.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/RcPanelToolbox.py", line 35
    print "RcPanelToolbox"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/RcPanelViewer.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/RcPanelViewer.py", line 42
    print "RcPanelViewer"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/RcRecSect.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/RcRecSect.py", line 37
    print "RcRecSect init"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/RcRecSectSolver.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/RcRecSectSolver.py", line 49
    print "RcRecSecSolver"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/concrete/SectLoad.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/SectLoad.py", line 86
    print a.get_loadcases()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strupy/concrete/rcsteel_area.py'...
***   File "./lib/python3.5/site-packages/strupy/concrete/rcsteel_area.py", line 113
    print area_diameter()
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/strupy/steel'...
Compiling './lib/python3.5/site-packages/strupy/steel/Bolt.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/Bolt.py", line 52
    print "Bolt init"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/BoltClip.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/BoltClip.py", line 38
    print "BoltConnect init"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/BoltConnection.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/BoltConnection.py", line 312
    print 'Category %s not defined!' %newcategory
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/MaterialSteel.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/MaterialSteel.py", line 39
    print 'MaterialSteel init'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/SteelElement.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/SteelElement.py", line 163
    print element.sectname
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/SteelElementLoad.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/SteelElementLoad.py", line 68
    print a.get_loadcases()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strupy/steel/SteelElementSolver.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/SteelElementSolver.py", line 36
    print "SteelElementSolver init"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/SteelSection.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/SteelSection.py", line 178
    print sec.sectname
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/SteelSectionLoad.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/SteelSectionLoad.py", line 102
    print a.get_loadcases()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strupy/steel/SteelSectionSolver.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/SteelSectionSolver.py", line 34
    print "SteelSectionSolver init"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/strupy/steel/database_sections'...
Compiling './lib/python3.5/site-packages/strupy/steel/element_capacity_conditions.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/element_capacity_conditions.py", line 156
    print 'element_capacity_conditions test'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/element_resistance.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/element_resistance.py", line 76
    print '!!!! class 4 !!!!!'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/section_capacity_conditions.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/section_capacity_conditions.py", line 156
    print 'section_capacity_conditions test'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/section_parameters.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/section_parameters.py", line 555
    print 'section_parameters test'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strupy/steel/section_resistance.py'...
***   File "./lib/python3.5/site-packages/strupy/steel/section_resistance.py", line 55
    print '!!!! class 4 !!!!!'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/strupy/x_graphic'...
Compiling './lib/python3.5/site-packages/strupy/x_graphic/BaseCreator2D.py'...
***   File "./lib/python3.5/site-packages/strupy/x_graphic/BaseCreator2D.py", line 91
    print 'addLine base function'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/strupy-0.5.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
